<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:translationX="20sp"
        android:translationY="20sp"
        tools:ignore="UselessParent">

        <RadioButton
            android:id="@+id/radio_red"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/rojo"
            android:textAlignment="center"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radio_blue"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/azul"
            android:textAlignment="center"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radio_green"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/verde"
            android:textAlignment="center"
            android:textSize="20sp" />
    </RadioGroup>

    <Switch
        android:id="@+id/special_switch"
        android:layout_width="120sp"
        android:layout_height="48dp"
        android:text="@string/special_switch"
        android:textAlignment="center"
        android:textSize="20sp"
        android:translationX="20sp"
        android:translationY="40sp" />

    <CheckBox
        android:id="@+id/check_leche"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:translationX="20sp"
        android:translationY="60sp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textview_leche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leche"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:translationX="70sp"
        android:translationY="20sp" />

    <CheckBox
        android:id="@+id/check_pan"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:translationX="20sp"
        android:translationY="60sp" />

    <TextView
        android:id="@+id/textview_pan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pan"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:translationX="70sp"
        android:translationY="20sp" />

    <CheckBox
        android:id="@+id/check_manzanas"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:translationX="20sp"
        android:translationY="60sp" />

    <TextView
        android:id="@+id/textview_manzanas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manzanas"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:translationX="70sp"
        android:translationY="20sp" />

    <CheckBox
        android:id="@+id/check_pasta"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:translationX="20sp"
        android:translationY="60sp" />

    <TextView
        android:id="@+id/textview_pasta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pasta"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:translationX="70sp"
        android:translationY="20sp" />

    <Button
        android:id="@+id/boton_comprar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comprar"
        android:translationX="20sp"
        android:translationY="40sp" />

    <TextView
        android:id="@+id/textview_lista"
        android:layout_width="370sp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:translationX="20sp"
        android:translationY="60sp" />

    <ImageView
        android:id="@+id/imagen_carro"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/carro_vacio_x"
        android:translationX="220sp"
        android:translationY="-560sp"
        tools:ignore="ContentDescription,ImageContrastCheck" />

</LinearLayout>